--- a/SVM_Classifier_from_scratch.ipynb
+++ b/SVM_Classifier_from_scratch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCrSZeZCKstaujCtBrf0kk",
+      "authorship_tag": "ABX9TyMFTizoLfglCshmgvSkN2qS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,7 +234,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-ZmXuL70nlku",
-        "outputId": "3c156032-65e9-4994-f967-b26cbabebbad"
+        "outputId": "d57210ec-6d84-4596-e893-20d6e612d5a0"
       },
       "execution_count": 4,
       "outputs": [
@@ -244,7 +244,9 @@
           "text": [
             "Dataset URL: https://www.kaggle.com/datasets/akshaydattatraykhare/diabetes-dataset\n",
             "License(s): CC0-1.0\n",
-            "diabetes-dataset.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
+            "Downloading diabetes-dataset.zip to /content\n",
+            "  0% 0.00/8.91k [00:00<?, ?B/s]\n",
+            "100% 8.91k/8.91k [00:00<00:00, 10.1MB/s]\n"
           ]
         }
       ]
@@ -273,7 +275,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cW62pl1poIHs",
-        "outputId": "9a3629e8-0973-4f9b-d8f3-ed19ba6a363a"
+        "outputId": "c958e93a-ee3e-4cd3-8c98-5c6cc98c32ab"
       },
       "execution_count": 5,
       "outputs": [
@@ -325,7 +327,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X2GPSiN4p6DO",
-        "outputId": "19a68ee5-c2e1-4697-c8ce-23c7a912fb08"
+        "outputId": "3c77c2f8-603f-420f-da63-5810155d16af"
       },
       "execution_count": 7,
       "outputs": [
@@ -351,7 +353,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tr1mEwfHp7OR",
-        "outputId": "248135a0-6b1b-4f92-b6e9-c4247b639204"
+        "outputId": "f4ad3467-9d99-48cd-bc56-558fad3f4267"
       },
       "execution_count": 8,
       "outputs": [
@@ -390,7 +392,7 @@
           "height": 178
         },
         "id": "y9sMumJLp9bj",
-        "outputId": "f14c589a-6590-423a-a5a8-22a771e95877"
+        "outputId": "26b38fd0-a10e-4a2f-fb95-9a09fe88324a"
       },
       "execution_count": 9,
       "outputs": [
@@ -459,7 +461,7 @@
           "height": 206
         },
         "id": "gOwX7T0zqB1a",
-        "outputId": "6b097662-af43-4c48-ba5a-24b8681893c7"
+        "outputId": "4df9fff5-5c2e-4fda-8e59-b361818a16c6"
       },
       "execution_count": 10,
       "outputs": [
@@ -483,7 +485,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-080aeede-3b89-4850-8be2-2acf0d6475b4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4c22c930-63b7-44e0-9612-4cf329a39d77\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -580,7 +582,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-080aeede-3b89-4850-8be2-2acf0d6475b4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4c22c930-63b7-44e0-9612-4cf329a39d77')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -632,12 +634,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-080aeede-3b89-4850-8be2-2acf0d6475b4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4c22c930-63b7-44e0-9612-4cf329a39d77 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-080aeede-3b89-4850-8be2-2acf0d6475b4');\n",
+              "        const element = document.querySelector('#df-4c22c930-63b7-44e0-9612-4cf329a39d77');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -657,8 +659,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5cd4e862-0453-47ac-afe9-7c313e5b87fd\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5cd4e862-0453-47ac-afe9-7c313e5b87fd')\"\n",
+              "<div id=\"df-e877086f-6040-488c-ad97-15620ec5f8ce\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e877086f-6040-488c-ad97-15620ec5f8ce')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -777,7 +779,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5cd4e862-0453-47ac-afe9-7c313e5b87fd button');\n",
+              "        document.querySelector('#df-e877086f-6040-488c-ad97-15620ec5f8ce button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -809,7 +811,7 @@
           "height": 300
         },
         "id": "tSr-E87zqExy",
-        "outputId": "d925e07f-84bd-4c2c-a84b-5af72ac86244"
+        "outputId": "e906f60d-b819-4d90-d5a4-23d9914f267b"
       },
       "execution_count": 11,
       "outputs": [
@@ -839,7 +841,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1c261721-45b9-4456-9133-29c7c1c5c1db\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-50c501a2-b5f9-4c6b-a345-fda082c7c149\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -972,7 +974,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c261721-45b9-4456-9133-29c7c1c5c1db')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50c501a2-b5f9-4c6b-a345-fda082c7c149')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1024,12 +1026,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1c261721-45b9-4456-9133-29c7c1c5c1db button.colab-df-convert');\n",
+              "        document.querySelector('#df-50c501a2-b5f9-4c6b-a345-fda082c7c149 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1c261721-45b9-4456-9133-29c7c1c5c1db');\n",
+              "        const element = document.querySelector('#df-50c501a2-b5f9-4c6b-a345-fda082c7c149');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1049,8 +1051,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b96d6ac0-d179-421e-b68e-51e1d895b48d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b96d6ac0-d179-421e-b68e-51e1d895b48d')\"\n",
+              "<div id=\"df-b7bf860b-48e5-4153-bab1-85127a6063b4\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b7bf860b-48e5-4153-bab1-85127a6063b4')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1169,7 +1171,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b96d6ac0-d179-421e-b68e-51e1d895b48d button');\n",
+              "        document.querySelector('#df-b7bf860b-48e5-4153-bab1-85127a6063b4 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1200,7 +1202,7 @@
           "height": 366
         },
         "id": "ofJs2BSrqJNp",
-        "outputId": "ef578ffd-10e2-4b08-9665-df7c499efebb"
+        "outputId": "22e5afcf-3218-487d-dce7-2a2504b346ae"
       },
       "execution_count": 12,
       "outputs": [
@@ -1298,7 +1300,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TErgk2YLqM-1",
-        "outputId": "fc7affc0-373d-4268-d7f4-d15675dfdecd"
+        "outputId": "75646e65-2b96-49fd-bd7f-0da818f6909f"
       },
       "execution_count": 13,
       "outputs": [
@@ -1356,7 +1358,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LnqKZQzzqn96",
-        "outputId": "1d017d7f-52f3-4d62-bb95-809741ec98f0"
+        "outputId": "d14aacfe-2279-4723-fa27-44fbd72de49b"
       },
       "execution_count": 15,
       "outputs": [
@@ -1405,7 +1407,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lqWaLFuQqyJw",
-        "outputId": "ac9cdd04-c3de-49d4-c1d2-cb22bda1c70c"
+        "outputId": "8cc538f3-8459-4d4e-8d52-37d79f479f46"
       },
       "execution_count": 16,
       "outputs": [
@@ -1451,7 +1453,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 80
         },
-        "outputId": "5bc4736e-6568-4159-89df-9e210b8802e5"
+        "outputId": "b3ad1511-fdc8-4e00-aa4d-7ce4ee9c71c2"
       },
       "execution_count": 18,
       "outputs": [
@@ -1895,7 +1897,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dHvZjwnVrz_Y",
-        "outputId": "8cb349f7-e9fa-40ad-fc60-3403b6ab455c"
+        "outputId": "7775ab6e-038e-4569-b7c8-99fe79626065"
       },
       "execution_count": 20,
       "outputs": [
@@ -1950,7 +1952,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GJt28JASthxj",
-        "outputId": "cfe9fbab-197a-4672-89bf-d3fed376f3ee"
+        "outputId": "a3a919fb-e116-4d0f-addc-26d16c26aa03"
       },
       "execution_count": 22,
       "outputs": [
@@ -1966,7 +1968,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model = SVM_Classifier(learning_rate=0.001, no_of_iterations=10000, lambda_param=0.01)"
+        "model = SVM_Classifier(learning_rate=0.001, no_of_iterations=1000, lambda_param=0.01)"
       ],
       "metadata": {
         "id": "Hh5uUYq8todT"
@@ -2009,7 +2011,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A69_5gs_uuFX",
-        "outputId": "474ca671-e86b-42a5-d65c-3f24038d1b28"
+        "outputId": "3e40f7d2-175b-47cd-fe08-6055ce217238"
       },
       "execution_count": 26,
       "outputs": [
@@ -2017,7 +2019,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "78.82736156351791"
+              "78.66449511400651"
             ]
           },
           "metadata": {},
@@ -2049,7 +2051,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oRTcRHyiu-jx",
-        "outputId": "04c83690-5763-43e0-9b18-6b7519450b17"
+        "outputId": "b081e9a4-69ca-4c35-8378-7880aafaeb1d"
       },
       "execution_count": 28,
       "outputs": [
@@ -2101,7 +2103,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0IgqgIGvDdA",
-        "outputId": "5abe9b84-0959-437b-8987-4cfb8621924d"
+        "outputId": "12bcd854-83b5-4171-dfd7-be75234bb0b1"
       },
       "execution_count": 29,
       "outputs": [
